# llm-hackathon-2025

./: .gitignore  .gitmodules  LISENSE  ORGANISATION.md  README.md  pyproject.toml
2-aiengine/: RAG_HPC_in_notebook.py  chat.py  chat_class.ipynb  demo.ipynb  full_demo.ipynb
2-aiengine/MainAgent/: PyDFTAgent.py  README.md  output.txt  rag_graph_pyd.py  snippet.py  utils.py
2-aiengine/MainAgent/example/: D4_02_rag_with_langchain_and_chromadb.ipynb
4-dissemination/: README.md  people.md
4-dissemination/presentation/: Ideas_logo_LARA-HPC.pptx  README.md
PyBigDFT-human-nb/: HCN-Human.ipynb  Spin-Polarize.ipynb
container/: Dockerfile-LARA  README.md  build_oci.sh  ontoflow.ipynb
deliverable/: README.md  bigdft_validator.ipynb  build_oci.sh  ontoflow.ipynb
docs/developments/: 1_ipython_magics.ipynb
lara-hpc/2-aiengine/: __init__.py  agent.py  magics.py
service/mcp_service/: server.py
service/protobufs/: mcp.proto  rag.proto
service/rag_service/: server.py
