[project]
name = "llm-hackathon-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.76",
    "langchain-openai>=0.3.33",
    "langgraph>=0.6.7",
    "langgraph-supervisor>=0.0.29",
    "openai>=1.107.1",
    "tenacity>=9.1.2",
    "sentence-transformers>=5.1.0",
    "llama-cpp-python>=0.3.16",
    "remotemanager>=0.14.2",
    "mcp>=1.14.0",
    "uvicorn>=0.35.0",
    "typer>=0.17.4",
    "sse-starlette>=3.0.2",
    "numpy>=2.3.3",
    "scipy>=1.16.2",
    "torch>=2.8.0",
    "rdflib>=7.1.4",
    "matplotlib>=3.10.6",
    "networkx>=3.5",
    "pyvis>=0.3.2",
    "tqdm>=4.67.1",
    "pywavelets>=1.9.0",
    "graphviz>=0.21",
    "instructor>=1.11.3",
    "requests>=2.32.5",
    "pydantic>=2.11.8",
    "anthropic>=0.67.0",
    "transformers>=4.56.1",
    "puremagic>=1.30",
    "markdownify>=1.2.0",
    "mammoth>=1.10.0",
    "pandas>=2.3.2",
    "pdfminer-six>=20250506",
    "python-pptx>=1.0.2",
    "pydub>=0.25.1",
    "beautifulsoup4>=4.13.5",
    "markupsafe>=3.0.2",
    "youtube-transcript-api>=1.2.2",
    "pymupdf>=1.26.4",
    "speechrecognition>=3.14.3",
    "spacy>=3.8.7",
    "scikit-learn>=1.7.2",
    "pykeen>=1.11.1",
    "pytest>=8.4.2",
    "fparser>=0.2.0",
    "rapidfuzz>=3.14.1",
    "open-fortran-parser>=0.6.1",
    "tree-sitter>=0.25.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ipython>=9.5.0",
    "jupyter-client>=8.6.3",
    "jupyter-core>=5.8.1",
    "mcp>=1.14.0",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "nbsphinx>=0.9.7",
    "nbval>=0.11.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "remotemanager>=0.14.2",
    "rich>=14.1.0",
    "ruff>=0.13.0",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
    "sse-starlette>=3.0.2",
    "typer>=0.17.4",
    "uvicorn>=0.35.0",
]
